--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,9 +34,10 @@ dependencies = [
     "transformers>=4.30.0",
     "datasets>=2.14.0",
     
-    # Biomedical NLP
+    # Biomedical NLP (pinned for numpy compatibility)
     "scispacy>=0.5.3",
-    "spacy>=3.6.0",
+    "spacy>=3.6.0,<3.8.0",
+    "thinc>=8.1.0,<8.2.0",
     
     # Graph processing
     "networkx>=3.1",
@@ -44,7 +45,7 @@ dependencies = [
     
     # Data processing
     "pandas>=2.0.0",
-    "numpy>=1.24.0",
+    "numpy>=1.24.0,<2.0.0",
     "scipy>=1.10.0",
     "scikit-learn>=1.3.0",
     
