--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,16 @@ dependencies = [
     "nltk>=3.8.1",
     "python-Levenshtein>=0.21.0",
     
+    # LangChain ecosystem for enhanced NLP and reasoning
+    "langchain>=0.1.0",
+    "langchain-community>=0.0.10",
+    "langchain-openai>=0.0.5",
+    "langchain-anthropic>=0.0.5",
+    "langchain-huggingface>=0.0.5",
+    "chromadb>=0.4.0",
+    "tiktoken>=0.5.0",
+    "langsmith>=0.0.60",
+    
     # Web scraping and APIs
     "beautifulsoup4>=4.12.0",
     "selenium>=4.10.0",
