--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,9 +70,15 @@ dependencies = [
     "langchain-openai>=0.0.5",
     "langchain-anthropic>=0.0.5",
     "langchain-huggingface>=0.0.5",
+    "langchain-ollama>=0.1.0",
     "chromadb>=0.4.0",
     "tiktoken>=0.5.0",
     "langsmith>=0.0.60",
+    
+    # Ollama and local LLM support
+    "ollama>=0.2.0",
+    "openai>=1.0.0",  # For OpenAI-compatible APIs
+    "httpx>=0.24.0",  # For HTTP requests to local APIs
     
     # Web scraping and APIs
     "beautifulsoup4>=4.12.0",
